--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "axios": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.5"
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.4.5",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
